nenolod     2005/10/08 19:56:56 UTC	(20051008-2759)
  Log:
  documentation updates

  Changes:	Modified:
  +6 -0		trunk/dist/example.conf (File Modified) 
  +6 -0		trunk/dist/example.userserv.conf (File Modified) 


nenolod     2005/10/08 19:34:46 UTC	(20051008-2757)
  Log:
  Fix error(s) in userserv/vhost.

  Changes:	Modified:
  +5 -5		trunk/modules/userserv/vhost.c (File Modified) 


nenolod     2005/10/08 19:10:25 UTC	(20051008-2755)
  Log:
  Place MemoServ section below OperServ.
  

  Changes:	Modified:
  +21 -21	trunk/dist/example.conf (File Modified) 
  +21 -21	trunk/dist/example.userserv.conf (File Modified) 


nenolod     2005/10/08 19:06:11 UTC	(20051008-2753)
  Log:
  - integrate vhost system into the core.
  

  Changes:	Modified:
  +2 -0		trunk/dist/example.conf (File Modified) 
  +2 -0		trunk/dist/example.userserv.conf (File Modified) 
  +155 -1	trunk/modules/nickserv/Makefile.in (File Modified) 
  + -		trunk/modules/nickserv/vhost.c (File Added) 
  +155 -1	trunk/modules/userserv/Makefile.in (File Modified) 
  + -		trunk/modules/userserv/vhost.c (File Added) 


pfish       2005/10/07 21:25:08 UTC	(20051007-2751)
  Log:
  - Fix empty notice
  - Display [unread] on new memos on MS LIST
  

  Changes:	Modified:
  +4 -1		trunk/modules/memoserv/list.c (File Modified) 


kog         2005/10/07 19:24:57 UTC	(20051007-2749)
  Log:
  read now gives notice of receipt if sender online, memo if sender offline 
  

  Changes:	Modified:
  +35 -7	trunk/modules/memoserv/read.c (File Modified) 


alambert    2005/10/07 18:18:19 UTC	(20051007-2747)
  Log:
  OS MODE: Make sure we specify which channel doesn't exist. Reported by pi.

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/mode.c (File Modified) 


nenolod     2005/10/07 03:45:59 UTC	(20051007-2745)
  Log:
  glibc sucks.

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


kog         2005/10/07 01:43:55 UTC	(20051007-2743)
  Log:
  notify hook now uses notice, not myuser_notice
  
