@@ -1,3 +1,12 @@
+nenolod     2005/10/08 20:01:48 UTC	(20051008-2761)
+  Log:
+  SRA passthrough for the account drop command.
+
+  Changes:	Modified:
+  +5 -4		trunk/modules/nickserv/drop.c (File Modified) 
+  +1 -1		trunk/modules/userserv/drop.c (File Modified) 
+
+
 nenolod     2005/10/08 19:56:56 UTC	(20051008-2759)
   Log:
   documentation updates
